# XUAN

./: .cta.json  .gitignore  CLAUDE.md  README.md  biome.json  package-lock.json  package.json
src/: routeTree.gen.ts  styles.css
src-backend/: .env  .env.example  main.py  pyproject.toml  test_api.py
src-backend/app/: config.py
src-backend/app/core/: dependencies.py
src-backend/app/models/: requests.py  responses.py
src-backend/app/routers/: divination.py  ingest.py  meiwen.py  query.py  ziwei.py
src-backend/app/services/: ingestion_service.py  llm_service.py  najia_adapter.py  prompt_builder.py  rag_service.py  ziwei_rag.py  ziwei_rules.py
src-backend/app/services/meiwen/: __init__.py  najia_adapter.py  prompt_builder.py
src-backend/data/documents/: sample.md
src/atoms/: palace.ts  viewport.ts  ziwei.ts
src/components/: custom-select.tsx  divination.tsx  icon-image.tsx  loading-overlay.tsx  palace-stamp.tsx  seal-stamp.tsx
src/features/meiwen/: atoms.ts  meiwen-page.tsx
src/lib/: api.ts  astrolabe.ts  dev-utils.ts  iztro-types.ts  meiwen-api.ts  star-descriptions.ts
src/routes/: .index.tsx.swp  __root.tsx  ancient-chart.tsx  app.tsx  divination.tsx  index.tsx  meiwen.tsx  test.tsx
